--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <td>
         <b>Kleene Algebra Modulo Theories</b>. Michael Greenberg, Ryan Beckett, and Eric Hayden Campbell.
 	
-	<i>Conditionally Accepted to PLDI</i>.
+	<i>PLDI</i>.
 	
 	
 	June 2022.
@@ -65,6 +65,8 @@
 	
       </td>
       <td>
+	
+	<a href="https://arxiv.org/pdf/1707.02894.pdf"> pdf </a>
 	
 	
       </td>
