--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </td>
       <td>
 	
-	<a href="https://arxiv.org/pdf/1707.02894.pdf"> pdf </a>
+	<a href="pdfs/kmts.pdf"> pdf </a>
 	
 	
       </td>
