--- a/papers/2016-06-15-imies.html
+++ b/papers/2016-06-15-imies.html
@@ -10,7 +10,7 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="../">Eric Hayden Campbell</a>
+                <a href="../">EHC</a>
             </div>
             <div id="navigation">
                 <!-- <a href="/">Home</a> -->
@@ -31,7 +31,7 @@
         <div id="content">
 	  <div>
   <h2> Constructing Integer Matrices with Integer Eigenvalues </h2>
-  <h3> Christopher Towse and Eric Campbell </h3>
+  <h3> Christopher Towse and <b>Eric Hayden Campbell</b> </h3>
 
   <!-- <p>Developed a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created a web app to create an IMIE from an arbitrary input matrix.</p> -->
   <p>
