--- a/papers/2017-04-15-thesis.html
+++ b/papers/2017-04-15-thesis.html
@@ -10,7 +10,7 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="../">Eric Hayden Campbell</a>
+                <a href="../">EHC</a>
             </div>
             <div id="navigation">
                 <!-- <a href="/">Home</a> -->
@@ -31,7 +31,7 @@
         <div id="content">
 	  <div>
   <h2> Infiniteness and Linear Temporal Logic </h2>
-  <h3> Eric Campbell, advised by Michael Greenberg </h3>
+  <h3> <b>Eric Hayden Campbell</b>, advised by Michael Greenberg </h3>
 
   <!-- <p>Proved Soundness, Completeness and Decidability for Finite-Trace Linear Temporal Logic. Developed a decision procedure for the logic. Proved the axiomatization equivalent to the temporal axioms in Temporal NetKAT, making a completeness proof possible for TNK.</p> -->
   <p>
