--- a/papers/2022-01-19-pi4.html
+++ b/papers/2022-01-19-pi4.html
@@ -10,7 +10,7 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="../">Eric Hayden Campbell</a>
+                <a href="../">EHC</a>
             </div>
             <div id="navigation">
                 <!-- <a href="/">Home</a> -->
@@ -31,7 +31,7 @@
         <div id="content">
 	  <div>
   <h2> Dependently-Typed Data Plane Programming </h2>
-  <h3> Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini </h3>
+  <h3> Matthias Eichholz, <b>Eric Hayden Campbell</b>, Matthias Krebs, Nate Foster,  Mira Mezini </h3>
 
   <!-- <p>Develop a dependent refinement type system for P4 with a liquid-style Z3 backend to prohibit undefined behavior</p> -->
   <p>
