--- a/index.html
+++ b/index.html
@@ -519,6 +519,20 @@
     
     <tr>
       <td>
+        Summer 2022
+      </td>
+      <td>
+	Instructor
+      </td>
+      <td>
+	
+	<a href="https://www.janestreet.com/join-jane-street/programs-and-events/amp/">CS 3</a>
+		at Jane Street AMP
+      </td>
+    </tr>
+    
+    <tr>
+      <td>
         Spring 2018
       </td>
       <td>
