--- a/index.html
+++ b/index.html
@@ -440,6 +440,11 @@
   <h2>News</h2> <table>
   
   <tr>
+    <td>January 20, 2023</td>
+    <td>Co-chairing the new session previews track for POPL. Come see my talk on Relational & Automated Verification on Friday!</td>
+  </tr>
+  
+  <tr>
     <td>March 10, 2022</td>
     <td>I gave an invited talk on Avenir at Intel</td>
   </tr>
@@ -467,11 +472,6 @@
   <tr>
     <td>April 28, 2020</td>
     <td>My talk on Avenir at the P4 Expert Roundtable Series is live <a href="https://www.youtube.com/watch?v=SKlvJb3xh1c&feature=emb_logo"> (watch it here!)</a></td>
-  </tr>
-  
-  <tr>
-    <td>June 25, 2019</td>
-    <td>Kicked off our <a href="https://nys4-h.org/career-explorations">Career Explorations Conference</a> for High School Students on Networking and Security! [<a href="./careerex.html">Labs</a>]</td>
   </tr>
   
 </table>
