--- a/news.html
+++ b/news.html
@@ -33,6 +33,11 @@
 <table>
   
   <tr>
+    <td>January 20, 2023</td>
+    <td>Co-chairing the new session previews track for POPL. Come see my talk on Relational & Automated Verification on Friday!</td>
+  </tr>
+  
+  <tr>
     <td>March 10, 2022</td>
     <td>I gave an invited talk on Avenir at Intel</td>
   </tr>
