--- a/index.html
+++ b/index.html
@@ -483,6 +483,15 @@
   <table>
   
   <tr class="posts">
+    <td>January 26, 2023</td>
+    <td><a href="./posts/2023-01-26-ttls.html">Cannibalize your TTL:<br />
+	      <span class="subtitle">A SIGBOVIK paper I didn't write</span>
+      
+      </a>
+    </td>
+  </tr>
+  
+  <tr class="posts">
     <td>December 29, 2021</td>
     <td><a href="./posts/2021-12-29-myst.html">Solving Myst Puzzles with Z3:<br />
 	      <span class="subtitle">How I Got Nerd-Sniped Playing VR Myst over Christmas</span>
