--- a/index.html
+++ b/index.html
@@ -492,6 +492,13 @@
   </tr>
   
   <tr class="posts">
+    <td>June  6, 2022</td>
+    <td><a href="./posts/2022-06-04-verification.html">Verification is a misnomer
+      </a>
+    </td>
+  </tr>
+  
+  <tr class="posts">
     <td>December 29, 2021</td>
     <td><a href="./posts/2021-12-29-myst.html">Solving Myst Puzzles with Z3:<br />
 	      <span class="subtitle">How I Got Nerd-Sniped Playing VR Myst over Christmas</span>
