--- a/index.html
+++ b/index.html
@@ -483,6 +483,15 @@
   <table>
   
   <tr class="posts">
+    <td>May 10, 2023</td>
+    <td><a href="./posts/2023-05-10-gcl.html">Symbolic Compilation for GCL:<br />
+	      <span class="subtitle">A Beginner's Guide to GCL and the Weakest Precondition</span>
+      
+      </a>
+    </td>
+  </tr>
+  
+  <tr class="posts">
     <td>January 26, 2023</td>
     <td><a href="./posts/2023-01-26-ttls.html">Cannibalize your TTL:<br />
 	      <span class="subtitle">A SIGBOVIK paper I didn't write</span>
