--- a/news.html
+++ b/news.html
@@ -10,13 +10,21 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="./">Eric Hayden Campbell</a>
+                <a href="./">EHC</a>
             </div>
             <div id="navigation">
-                <a href="./">Home</a>
+                <!-- <a href="/">Home</a> -->
                 <a href="./news.html">News</a>
                 <!-- <a href="/papers.html">Publications</a>x -->
                 <a href="./posts.html">Blog</a>
+                <a href="./pdfs/cv.pdf">Vita</a>
+                <a href="https://github.com/ericthewry">
+	                <img src="./images/github.png" width="15" height="15" />
+	                </a>
+                <a href="https://www.linkedin.com/in/eric-campbell-ba339490/">
+	                <img src="./images/linkedin.png" width="15" height="15" />
+                </a>
+
             </div>
         </div>
 
@@ -25,18 +33,33 @@
 <table>
   
   <tr>
+    <td>January 20, 2023</td>
+    <td>Co-chairing the new session previews track for POPL. Come see my talk on Relational & Automated Verification on Friday!</td>
+  </tr>
+  
+  <tr>
+    <td>March 10, 2022</td>
+    <td>I gave an invited talk on Avenir at Intel</td>
+  </tr>
+  
+  <tr>
+    <td>July 19, 2021</td>
+    <td>I gave an invited talk on control plane synthesis at CAV's P4 Verification Workshop</td>
+  </tr>
+  
+  <tr>
+    <td>May  3, 2021</td>
+    <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="https://simons.berkeley.edu/talks/tbd-323">watch it here</a>)</td>
+  </tr>
+  
+  <tr>
+    <td>April 19, 2021</td>
+    <td>Cornell's CS News <a href="https://www.cs.cornell.edu/information/news/newsitem11609/cornell-cs-researchers-collaborate-infosys-avenir-and-present-usenix">interviewed me</a> about Avenir</td>
+  </tr>
+  
+  <tr>
     <td>December 15, 2020</td>
-    <td>I passed my thesis proposal exam!</td>
-  </tr>
-  
-  <tr>
-    <td>December 11, 2020</td>
-    <td>Avenir has been accepted to NSDI 2021!</td>
-  </tr>
-  
-  <tr>
-    <td>December  1, 2020</td>
-    <td>My linguistics work with Mats Rooth on Epistemic extensions to KAT (Epik) was accepted to SCiL 2020!</td>
+    <td>I passed my thesis proposal!</td>
   </tr>
   
   <tr>
