--- a/papers/2017-04-15-thesis.html
+++ b/papers/2017-04-15-thesis.html
@@ -10,20 +10,28 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="../">Eric Hayden Campbell</a>
+                <a href="../">EHC</a>
             </div>
             <div id="navigation">
-                <a href="../">Home</a>
+                <!-- <a href="/">Home</a> -->
                 <a href="../news.html">News</a>
                 <!-- <a href="/papers.html">Publications</a>x -->
                 <a href="../posts.html">Blog</a>
+                <a href="../pdfs/cv.pdf">Vita</a>
+                <a href="https://github.com/ericthewry">
+	                <img src="../images/github.png" width="15" height="15" />
+	                </a>
+                <a href="https://www.linkedin.com/in/eric-campbell-ba339490/">
+	                <img src="../images/linkedin.png" width="15" height="15" />
+                </a>
+
             </div>
         </div>
 
         <div id="content">
 	  <div>
   <h2> Infiniteness and Linear Temporal Logic </h2>
-  <h3> Eric Campbell, advised by Michael Greenberg </h3>
+  <h3> <b>Eric Hayden Campbell</b>, advised by Michael Greenberg </h3>
 
   <!-- <p>Proved Soundness, Completeness and Decidability for Finite-Trace Linear Temporal Logic. Developed a decision procedure for the logic. Proved the axiomatization equivalent to the temporal axioms in Temporal NetKAT, making a completeness proof possible for TNK.</p> -->
   <p>
