--- a/careerex.html
+++ b/careerex.html
@@ -10,13 +10,21 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="./">Eric Hayden Campbell</a>
+                <a href="./">EHC</a>
             </div>
             <div id="navigation">
-                <a href="./">Home</a>
+                <!-- <a href="/">Home</a> -->
                 <a href="./news.html">News</a>
                 <!-- <a href="/papers.html">Publications</a>x -->
                 <a href="./posts.html">Blog</a>
+                <a href="./pdfs/cv.pdf">Vita</a>
+                <a href="https://github.com/ericthewry">
+	                <img src="./images/github.png" width="15" height="15" />
+	                </a>
+                <a href="https://www.linkedin.com/in/eric-campbell-ba339490/">
+	                <img src="./images/linkedin.png" width="15" height="15" />
+                </a>
+
             </div>
         </div>
 
