--- a/papers/2016-06-15-imies.html
+++ b/papers/2016-06-15-imies.html
@@ -10,20 +10,28 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="../">Eric Hayden Campbell</a>
+                <a href="../">EHC</a>
             </div>
             <div id="navigation">
-                <a href="../">Home</a>
+                <!-- <a href="/">Home</a> -->
                 <a href="../news.html">News</a>
                 <!-- <a href="/papers.html">Publications</a>x -->
                 <a href="../posts.html">Blog</a>
+                <a href="../pdfs/cv.pdf">Vita</a>
+                <a href="https://github.com/ericthewry">
+	                <img src="../images/github.png" width="15" height="15" />
+	                </a>
+                <a href="https://www.linkedin.com/in/eric-campbell-ba339490/">
+	                <img src="../images/linkedin.png" width="15" height="15" />
+                </a>
+
             </div>
         </div>
 
         <div id="content">
 	  <div>
   <h2> Constructing Integer Matrices with Integer Eigenvalues </h2>
-  <h3> Christopher Towse and Eric Campbell </h3>
+  <h3> Christopher Towse and <b>Eric Hayden Campbell</b> </h3>
 
   <!-- <p>Developed a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created a web app to create an IMIE from an arbitrary input matrix.</p> -->
   <p>
