--- a/posts.html
+++ b/posts.html
@@ -43,6 +43,15 @@
   </tr>
   
   <tr class="posts">
+    <td>Feb 27, 2023</td>
+    <td><a href="./posts/2023-02-27-tofino.html">P4 is not going anywhere:<br />
+	      <span class="subtitle">Nick McKeown's Committment to P4</span>
+      
+      </a>
+    </td>
+  </tr>
+  
+  <tr class="posts">
     <td>Jan 26, 2023</td>
     <td><a href="./posts/2023-01-26-ttls.html">Cannibalize your TTL:<br />
 	      <span class="subtitle">A SIGBOVIK paper I didn't write</span>
