--- a/my-site/index.html
+++ b/my-site/index.html
@@ -6,6 +6,10 @@ title: Eric Hayden Campbell
   <img class=".float-left" src="/images/ehc86_2018.jpg" style="margin-left: 20px; margin-top: 10px; width: 180px;" />
   <div id="info">
     <h1> Eric Hayden Campbell </h1>
+
+    <p>
+      I am graduating this year and looking for Postdoc Positions!
+    </p>
     <p>
     As a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
     University</a>, I solve problems with deep programmability in software
