--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
   <img class=".float-left" src="./images/ehc86_2018.jpg" style="margin-left: 20px; margin-top: 10px; width: 180px;" />
   <div id="info">
     <h1> Eric Hayden Campbell </h1>
+
+    <p>
+      I am graduating this year and looking for Postdoc Positions!
+    </p>
     <p>
     As a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
     University</a>, I solve problems with deep programmability in software
@@ -543,6 +547,20 @@
 <div>
   <h2>Teaching</h2>
   <table>
+    
+    <tr>
+      <td>
+        Summer 2023
+      </td>
+      <td>
+	Instructor
+      </td>
+      <td>
+	
+	<a href="https://www.janestreet.com/join-jane-street/programs-and-events/amp/">CS 3</a>
+		at Jane Street AMP
+      </td>
+    </tr>
     
     <tr>
       <td>
