--- a/news.html
+++ b/news.html
@@ -33,6 +33,11 @@
 <table>
   
   <tr>
+    <td>October 18, 2023</td>
+    <td>Visited EPFL! Gave a talk about Avenir in Ed's group and worked with Christoph on some exciting new directions!</td>
+  </tr>
+  
+  <tr>
     <td>January 20, 2023</td>
     <td>Co-chairing the new session previews track for POPL. Come see my talk on Relational & Automated Verification on Friday!</td>
   </tr>
