--- a/index.html
+++ b/index.html
@@ -33,25 +33,37 @@
   <img class=".float-left" src="./images/ehc86_2018.jpg" style="margin-left: 20px; margin-top: 10px; width: 180px;" />
   <div id="info">
     <h1> Eric Hayden Campbell </h1>
-
+    <h2> Cornell University </h2>
     <p>
-      I am graduating this year and looking for Postdoc Positions!
-    </p>
-    <p>
-    As a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
-    University</a>, I solve problems with deep programmability in software
-    defined networks. I am advised by Nate Foster, and supported by the NSF
-    GRFP. </p>
+    My research focuses on program synthesis 
+    <!-- for programs written against core interfaces in  -->
+    Software Defined Networks (SDN). Most recently, I've been working on specifiation
+    inference for data plane programs, and on program synthesis to solve the 
+    <a href="https://www.usenix.org/system/files/nsdi21-campbell.pdf">control plane mapping problem</a>.
 
-    <p> In my free time 🤣, I dabble in
-    algebra, <a href="./pdfs/epistemic_kat.pdf">linguistics</a>, <a href="http://latindance.arts.cornell.edu/">dance</a>,
-    and <a href="https://www.youtube.com/watch?v=Ph2zyrPXloQ">music</a>. </p>
+    <!-- As a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
+    University</a>, . -->
+
+  </p>
+
+    <!-- <p> In my free time 🤣, I dabble in
+    algebra, <a href="/pdfs/epistemic_kat.pdf">linguistics</a>, <a href="http://latindance.arts.cornell.edu/">dance</a>,
+    and <a href="https://www.youtube.com/watch?v=Ph2zyrPXloQ">music</a>. </p> -->
 
     <p> email: ehc86 [at] institution [dot] edu
     </div>
   </div>
 </div>
 
+<!-- <br/> -->
+<p style="text-align: center;">
+  <i> 
+    <b>
+    I am graduating and looking for postdoc positions focusing on program synthesis! 
+    <!-- But I also have ideas about type systems, linguistics, and language design. -->
+    </b>
+  </i>
+</p>
 
 <div id="pubs">
   <h2>Publications</h2>
@@ -444,6 +456,11 @@
   <h2>News</h2> <table>
   
   <tr>
+    <td>October 18, 2023</td>
+    <td>Visited EPFL! Gave a talk about Avenir in Ed's group and worked with Christoph on some exciting new directions!</td>
+  </tr>
+  
+  <tr>
     <td>January 20, 2023</td>
     <td>Co-chairing the new session previews track for POPL. Come see my talk on Relational & Automated Verification on Friday!</td>
   </tr>
@@ -471,11 +488,6 @@
   <tr>
     <td>December 15, 2020</td>
     <td>I passed my thesis proposal!</td>
-  </tr>
-  
-  <tr>
-    <td>April 28, 2020</td>
-    <td>My talk on Avenir at the P4 Expert Roundtable Series is live <a href="https://www.youtube.com/watch?v=SKlvJb3xh1c&feature=emb_logo"> (watch it here!)</a></td>
   </tr>
   
 </table>
