--- a/my-site/index.html
+++ b/my-site/index.html
@@ -9,13 +9,9 @@ title: Eric Hayden Campbell
     <h2> Cornell University </h2>
     <p>
     My research focuses on program synthesis 
-    <!-- for programs written against core interfaces in  -->
-    Software Defined Networks (SDN). Most recently, I've been working on specifiation
+    Software Defined Networks (SDN). Most recently, I've been working on specification
     inference for data plane programs, and on program synthesis to solve the 
     <a href="https://www.usenix.org/system/files/nsdi21-campbell.pdf">control plane mapping problem</a>.
-
-    <!-- As a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
-    University</a>, . -->
 
   </p>
 
@@ -32,7 +28,7 @@ title: Eric Hayden Campbell
 <p style="text-align: center;">
   <i> 
     <b>
-    I am graduating and looking for postdoc positions focusing on program synthesis! 
+      I am graduating, and will be joining Isil Dillig and Aditya Akella at UT Austin in the fall!
     <!-- But I also have ideas about type systems, linguistics, and language design. -->
     </b>
   </i>
