--- a/index.html
+++ b/index.html
@@ -36,13 +36,9 @@
     <h2> Cornell University </h2>
     <p>
     My research focuses on program synthesis 
-    <!-- for programs written against core interfaces in  -->
-    Software Defined Networks (SDN). Most recently, I've been working on specifiation
+    Software Defined Networks (SDN). Most recently, I've been working on specification
     inference for data plane programs, and on program synthesis to solve the 
     <a href="https://www.usenix.org/system/files/nsdi21-campbell.pdf">control plane mapping problem</a>.
-
-    <!-- As a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
-    University</a>, . -->
 
   </p>
 
@@ -59,7 +55,7 @@
 <p style="text-align: center;">
   <i> 
     <b>
-    I am graduating and looking for postdoc positions focusing on program synthesis! 
+      I am graduating, and will be joining Isil Dillig and Aditya Akella at UT Austin in the fall!
     <!-- But I also have ideas about type systems, linguistics, and language design. -->
     </b>
   </i>
@@ -457,7 +453,7 @@
   
   <tr>
     <td>October 18, 2023</td>
-    <td>Visited EPFL! Gave a talk about Avenir in Ed's group and worked with Christoph on some exciting new directions!</td>
+    <td>Visited EPFL! Gave a talk about Avenir in Ed's group</td>
   </tr>
   
   <tr>
