--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
   
   <tr>
     <td>October 18, 2023</td>
-    <td>Visited EPFL! Gave a talk about Avenir in Ed's group and worked with Christoph on some exciting new directions!</td>
+    <td>Visited EPFL! Gave a talk about Avenir in Ed's group</td>
   </tr>
   
   <tr>
