--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
     <h1> Eric Hayden Campbell </h1>
     <h2> Cornell University </h2>
     <p>
-    My research focuses on program synthesis 
-    Software Defined Networks (SDN). Most recently, I've been working on specification
-    inference for data plane programs, and on program synthesis to solve the 
-    <a href="https://www.usenix.org/system/files/nsdi21-campbell.pdf">control plane mapping problem</a>.
+    My research focuses on program semantics and synthesis for
+    Software Defined Networks (SDN). I believe that 
+    hands-off formal methods tools
+    can help solve limiting usability problems 
+    with data plane programming languages.
 
   </p>
 
