--- a/my-site/index.html
+++ b/my-site/index.html
@@ -8,7 +8,7 @@ title: Eric Hayden Campbell
     <h1> Eric Hayden Campbell </h1>
     <h2> Cornell University </h2>
     <p>
-    My research focuses on program semantics and synthesis for
+    My research focuses on program semantics, verification, and synthesis for
     Software Defined Networks (SDN). I believe that 
     hands-off formal methods tools
     can help solve limiting usability problems 
