--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           
           
           <br />
-          Matthias Eichholz, <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini
+          Matthias Eichholz + <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini
           <br />
 
 	
