--- a/papers/2019-01-15-safep4.html
+++ b/papers/2019-01-15-safep4.html
@@ -31,7 +31,7 @@
         <div id="content">
 	  <div>
   <h2> How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4 </h2>
-  <h3> Matthias Eichholz, <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini </h3>
+  <h3> Matthias Eichholz + <b>Eric Hayden Campbell</b>, Nate Foster, Guido Salvaneschi, Mira Mezini </h3>
 
   <!-- <p>Develop a Type System for P4 that prohibits references to invalid headers. Surveys open source programs to identify real-world bugs that our type system prevents</p> -->
   <p>
