--- a/index.html
+++ b/index.html
@@ -492,6 +492,11 @@
   <h2>News</h2> <table>
   
   <tr>
+    <td>August 23, 2024</td>
+    <td>The AEC for OOPSLA '24 awarded <a href="https://github.com/cornell-netlab/capisce">Capisce</a> both the Functional and Reusable badges</td>
+  </tr>
+  
+  <tr>
     <td>October 18, 2023</td>
     <td>Visited EPFL! Gave a talk about Avenir in Ed's group</td>
   </tr>
@@ -519,11 +524,6 @@
   <tr>
     <td>April 19, 2021</td>
     <td>Cornell's CS News <a href="https://www.cs.cornell.edu/information/news/newsitem11609/cornell-cs-researchers-collaborate-infosys-avenir-and-present-usenix">interviewed me</a> about Avenir</td>
-  </tr>
-  
-  <tr>
-    <td>December 15, 2020</td>
-    <td>I passed my thesis proposal!</td>
   </tr>
   
 </table>
