--- a/news.html
+++ b/news.html
@@ -33,6 +33,11 @@
 <table>
   
   <tr>
+    <td>August 23, 2024</td>
+    <td>The AEC for OOPSLA '24 awarded <a href="https://github.com/cornell-netlab/capisce">Capisce</a> both the Functional and Reusable badges</td>
+  </tr>
+  
+  <tr>
     <td>October 18, 2023</td>
     <td>Visited EPFL! Gave a talk about Avenir in Ed's group</td>
   </tr>
