--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
   
   <tr>
     <td>August 23, 2024</td>
-    <td>The AEC for OOPSLA '24 awarded <a href="https://github.com/cornell-netlab/capisce">Capisce</a> both the Functional and Reusable badges</td>
+    <td>The AEC for OOPSLA '24 awarded Capisce Functional, Resusable, and <a href="https://github.com/cornell-netlab/capisce">Available</a>!</td>
   </tr>
   
   <tr>
