--- a/my-site/index.html
+++ b/my-site/index.html
@@ -6,34 +6,40 @@ title: Eric Hayden Campbell
   <img class=".float-left" src="/images/ehc86_2018.jpg" style="margin-left: 20px; margin-top: 10px; width: 180px;" />
   <div id="info">
     <h1> Eric Hayden Campbell </h1>
-    <h2> Cornell University </h2>
+    <h2> 
+      Postdoctoral Research Fellow <br/>
+      UT Austin 
+    </h2>
+    <p> email: ehc86 [at] cornell [dot] edu </p>
     <p>
-    My research focuses on program semantics, verification, and synthesis for
-    Software Defined Networks (SDN). I believe that 
-    hands-off formal methods tools
-    can help solve limiting usability problems 
-    with data plane programming languages.
-
-  </p>
-
-    <!-- <p> In my free time 🤣, I dabble in
-    algebra, <a href="/pdfs/epistemic_kat.pdf">linguistics</a>, <a href="http://latindance.arts.cornell.edu/">dance</a>,
-    and <a href="https://www.youtube.com/watch?v=Ph2zyrPXloQ">music</a>. </p> -->
-
-    <p> email: ehc86 [at] institution [dot] edu
+      My research focuses on program semantics, verification, and synthesis for
+      open programs. I believe that hands-off formal methods tools
+      can help us precisely reason about dynamically (re)-configurable code.
+    </p>
     </div>
   </div>
 </div>
+<p> 
+  During my PhD at Cornell University, I focused on a particular kind of open program, 
+  networking data plane programs: type checking them, inferring their specs,
+  and generating their configurations. These days, I'm interested in a broader 
+  class of open programs, including databases, operating systems, and
+  AI programming systems.
+</p>
 
+<p> 
+  In my free time 🤣, I dabble in 
+  <a href="/pdfs/epistemic_kat.pdf">linguistics</a>, 
+  <a href="http://latindance.arts.cornell.edu/">dance</a>,
+  and <a href="https://www.youtube.com/watch?v=Ph2zyrPXloQ">music</a>. 
+</p>
 <!-- <br/> -->
-<p style="text-align: center;">
+<!-- <p style="text-align: center;">
   <i> 
-    <b>
-      I am graduating, and will be joining Isil Dillig and Aditya Akella at UT Austin in the fall!
-    <!-- But I also have ideas about type systems, linguistics, and language design. -->
+    <b></b>
     </b>
   </i>
-</p>
+</p> -->
 
 <div id="pubs">
   <h2>Publications</h2>
