--- a/my-site/index.html
+++ b/my-site/index.html
@@ -8,6 +8,8 @@ title: Eric Hayden Campbell
     <h1> Eric Hayden Campbell </h1>
     <h2> 
       Postdoctoral Research Fellow <br/>
+      <a href="https://www.cs.utexas.edu/~isil/#students">UToPiA</a>, 
+      <a href="https://utns.cs.utexas.edu/">UTNS</a>  @ 
       UT Austin 
     </h2>
     <p> email: ehc86 [at] cornell [dot] edu </p>
@@ -28,7 +30,7 @@ title: Eric Hayden Campbell
 </p>
 
 <p> 
-  In my free time 🤣, I dabble in 
+  In my free time, I dabble in 
   <a href="/pdfs/epistemic_kat.pdf">linguistics</a>, 
   <a href="http://latindance.arts.cornell.edu/">dance</a>,
   and <a href="https://www.youtube.com/watch?v=Ph2zyrPXloQ">music</a>. 
