--- a/index.html
+++ b/index.html
@@ -500,6 +500,11 @@
   <h2>News</h2> <table>
   
   <tr>
+    <td>November 21, 2024</td>
+    <td>Successfully defended my dissertation!</td>
+  </tr>
+  
+  <tr>
     <td>August 23, 2024</td>
     <td>The AEC for OOPSLA '24 awarded Capisce Functional, Resusable, and <a href="https://github.com/cornell-netlab/capisce">Available</a>!</td>
   </tr>
@@ -527,11 +532,6 @@
   <tr>
     <td>May  3, 2021</td>
     <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="https://simons.berkeley.edu/talks/tbd-323">watch it here</a>)</td>
-  </tr>
-  
-  <tr>
-    <td>April 19, 2021</td>
-    <td>Cornell's CS News <a href="https://www.cs.cornell.edu/information/news/newsitem11609/cornell-cs-researchers-collaborate-infosys-avenir-and-present-usenix">interviewed me</a> about Avenir</td>
   </tr>
   
 </table>
