--- a/news.html
+++ b/news.html
@@ -33,6 +33,11 @@
 <table>
   
   <tr>
+    <td>November 21, 2024</td>
+    <td>Successfully defended my dissertation!</td>
+  </tr>
+  
+  <tr>
     <td>August 23, 2024</td>
     <td>The AEC for OOPSLA '24 awarded Capisce Functional, Resusable, and <a href="https://github.com/cornell-netlab/capisce">Available</a>!</td>
   </tr>
