--- a/my-site/index.html
+++ b/my-site/index.html
@@ -12,7 +12,7 @@ title: Eric Hayden Campbell
       <a href="https://utns.cs.utexas.edu/">UTNS</a>  @ 
       UT Austin 
     </h2>
-    <p> email: ehc86 [at] cornell [dot] edu </p>
+    <p> email: first [.] middle [.] last [at] utexas [.] edu </p>
     <p>
       My research focuses on program semantics, verification, and synthesis for
       open programs. I believe that hands-off formal methods tools
