--- a/news.html
+++ b/news.html
@@ -33,6 +33,21 @@
 <table>
   
   <tr>
+    <td>November 21, 2024</td>
+    <td>Successfully defended my dissertation!</td>
+  </tr>
+  
+  <tr>
+    <td>August 23, 2024</td>
+    <td>The AEC for OOPSLA '24 awarded Capisce Functional, Resusable, and <a href="https://github.com/cornell-netlab/capisce">Available</a>!</td>
+  </tr>
+  
+  <tr>
+    <td>October 18, 2023</td>
+    <td>Visited EPFL! Gave a talk about Avenir in Ed's group</td>
+  </tr>
+  
+  <tr>
     <td>January 20, 2023</td>
     <td>Co-chairing the new session previews track for POPL. Come see my talk on Relational & Automated Verification on Friday!</td>
   </tr>
