--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
       <!-- </td> -->
       <!-- <td> -->
 	
+	 <a href="pdfs/capisce-oopsla24.pdf" title="slides" class="icon"><img src="./images/easel-fill.svg" /></a>
+	 
 
     
     
