--- a/index.html
+++ b/index.html
@@ -538,6 +538,11 @@
   </tr>
   
   <tr>
+    <td>November  1, 2024</td>
+    <td>Started my postdoc @ UT Austin with Isil and Aditya</td>
+  </tr>
+  
+  <tr>
     <td>August 23, 2024</td>
     <td>The AEC for OOPSLA '24 awarded Capisce Functional, Resusable, and <a href="https://github.com/cornell-netlab/capisce">Available</a>!</td>
   </tr>
@@ -560,11 +565,6 @@
   <tr>
     <td>July 19, 2021</td>
     <td>I gave an invited talk on control plane synthesis at CAV's P4 Verification Workshop</td>
-  </tr>
-  
-  <tr>
-    <td>May  3, 2021</td>
-    <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="https://simons.berkeley.edu/talks/tbd-323">watch it here</a>)</td>
   </tr>
   
 </table>
