--- a/news.html
+++ b/news.html
@@ -38,6 +38,11 @@
   </tr>
   
   <tr>
+    <td>November  1, 2024</td>
+    <td>Started my postdoc @ UT Austin with Isil and Aditya</td>
+  </tr>
+  
+  <tr>
     <td>August 23, 2024</td>
     <td>The AEC for OOPSLA '24 awarded Capisce Functional, Resusable, and <a href="https://github.com/cornell-netlab/capisce">Available</a>!</td>
   </tr>
