--- a/index.html
+++ b/index.html
@@ -537,6 +537,11 @@
   <h2>News</h2> <table>
   
   <tr>
+    <td>May 26, 2025</td>
+    <td>I'll be serving on the OOPSLA '26 PC!</td>
+  </tr>
+  
+  <tr>
     <td>November 21, 2024</td>
     <td>Successfully defended my dissertation!</td>
   </tr>
@@ -564,11 +569,6 @@
   <tr>
     <td>March 10, 2022</td>
     <td>I gave an invited talk on Avenir at Intel</td>
-  </tr>
-  
-  <tr>
-    <td>July 19, 2021</td>
-    <td>I gave an invited talk on control plane synthesis at CAV's P4 Verification Workshop</td>
   </tr>
   
 </table>
