--- a/news.html
+++ b/news.html
@@ -33,6 +33,11 @@
 <table>
   
   <tr>
+    <td>May 26, 2025</td>
+    <td>I'll be serving on the OOPSLA '26 PC!</td>
+  </tr>
+  
+  <tr>
     <td>November 21, 2024</td>
     <td>Successfully defended my dissertation!</td>
   </tr>
