restructure home page

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -43,10 +43,22 @@ title: Eric Hayden Campbell
   </i>
 </p> -->
 
+<div>
+  <h2>Theses</h2>
+  $partial("templates/theses.html")$
+</div>
+
+
 <div id="pubs">
-  <h2>Publications</h2>
+  <h2>Conference Papers</h2>
   $partial("templates/paper-list.html")$
 </div>
+
+<div>
+  <h2>Other Publications</h2>
+  $partial("templates/wkshop-list.html")$
+</div>
+
 
 <div id="News">
   <h2>News</h2> $partial("templates/news.html")$
